# CryptoPulse

./: .gitignore  .replit  ANALISE_TEMPO_REAL.md  DEPLOY_INSTRUCTIONS.md  MOBILE_BACKGROUND_FIX.md  NETLIFY_DEPLOY.md  RATE_LIMITING.md  README.md  SOLUCAO_FINAL.md  _redirects  app.py  app_fast.py  app_simple.py  crypto-analyzer.html  crypto_analyzer.py  data_fetcher.py  debug_app.py  enhanced_analyzer.py  index.html  main.py  market_data.py  netlify-build.sh  netlify.toml  package.json  pyproject.toml  replit.md  requirements.txt  signal_generator.py  start_server.py  technical_indicators.py  test-api.js  test_30_coins.py  test_coin_count.py  test_get_top_cryptocurrencies.py  test_local.html  test_mobile_background.html  test_new_indicators.py  test_particles.html  test_simple.html  test_simple_particles.html  (+5 more)
attached_assets/: Pasted-Crie-um-software-em-Python-que-analise-o-mercado-de-criptomoedas-focando-em-uma-moeda-espec-fica-p-1754488496657_1754488496658.txt
netlify/functions/: analyze-crypto.js  analyze-crypto.tmp.js  package-lock.json  package.json
static/css/: style.css
static/js/: particles.js  script.js
templates/: index.html
